syntax = "proto3";
option go_package = "github.com/les-cours/book-service/protobuf/book";

package book;


//    ID string
//    Title string
//    Author string
//    Description string
//    Pages int
//    Is_published bool


message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    string description = 4;
    int64 pages = 5;
    bool is_published = 6;
}


// Tips:
// if we need to send only id on other requests,
// we can create a message with a general name and reuse it
// No need to create a new message for each request




message BookId {
    string id = 1;
}

message BooksIds {
    repeated string ids = 1;
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
    string description = 3;
    int64 pages = 4;
    bool isPublished = 5;
}
// Tips:
// If we dont need any additional data or fields, 
// We can use the message Book as return type on our rpc method
message BookResponse {
    Book book = 1;
}
message BooksResponse {
    repeated Book books = 1;
}


message Pagination {
    int64 current_page =  1;
    int64 per_page = 2;
}

message BookPagination {
    repeated string ids = 1;
    Pagination pagination = 2;
}


service BookService {
    rpc GetBook (BookId) returns (BookResponse) {}
    rpc CreateBook(CreateBookRequest) returns (BookId) {}
    rpc UpdateBook(Book) returns (BookId) {}
    rpc DeleteBook(BookId) returns (BookId) {}
    rpc GetBooks (BookPagination) returns (BooksResponse) {}
}
